--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,35 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import "../styles/style.css";
+import Card from "../components/Card.astro";
+import Navigation from "../components/Navigation.astro";
+import Button from "../components/Button.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <Navigation />
+    <h1>Astro</h1>
+
+    <main>
+      <Button variant="primary" size="small">TEXT</Button>
+      <Button variant="secondary" size="medium">TEXT</Button>
+      <Button variant="secondary" size="large">TEXT</Button>
+      <!-- <Card header="Hej Verden">
+        <img src="/1.jpg" alt="et billede" />
+        <button>Klik her</button>
+      </Card>
+
+      <Card header="Hej Verden">
+        <button>Klik her</button>
+        <img src="/2.jpg" alt="et billede" />
+      </Card> -->
+    </main>
+  </body>
+</html>
