--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,11 +2,12 @@
 // const header = Astro.props.header;
 // const text = Astro.props.text;
 
-const { header } = Astro.props;
+const { header, soldOut } = Astro.props;
 ---
 
 <article class="card">
   <h2>{header}</h2>
+  {soldOut && <p>Udsolgt</p>}
   <p>kortere lorem ipsum</p>
   <slot />
 </article>
