--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,6 @@
 ---
 
 <nav>
-  <a href="#">Hjem</a>
-  <a href="#">Om Os</a>
-  <a href="#">Kontakt</a>
+  <a href="/">Hjem</a>
+  <a href="/aboutus ">Om Os</a>
 </nav>
